Implemented SharpShooter Like templates for HTA & JS

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -61,6 +61,7 @@ strong_name_required = //####STRONG_NAME_REQUIRED####
 vba_auto_open = ####VBA_AUTO_OPEN####
 vba_file_open = ####VBA_FILE_OPEN####
 vba_required_custom_part = ####VBA_REQUIRED_CUSTOM_PART####
+dotnet2js_version = //####DOTNET2JS_VERSION####
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
@@ -184,10 +185,6 @@ compiler_args = -r:System.EnterpriseServices
 custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
 
 
-[windows_js:VenomaToJs]
-expected_format = RAW_BIN
-output_format = .js
-
 [windows_pwsh:DelegateType]
 expected_format = RAW_BIN
 output_format = .ps1
@@ -271,6 +268,10 @@ expected_format = RAW_BIN
 output_format = .elf
 compiler_args = -z execstack -fno-stack-protector
 
+[linux:osep]
+expected_format = RAW_BIN
+output_format = .elf
+compiler_args = -z execstack -fno-stack-protector
 
 [linux:LD_LIBRARY_PATH.so]
 expected_format = RAW_BIN
@@ -295,3 +296,53 @@ output_format = .vbs
 [windows_vbs:CreateRemoteThread]
 expected_format = RAW_BIN
 output_format = .vbs
+
+[windows_hta:VenomaToJs]
+expected_format = RAW_BIN
+output_format = .hta
+
+[windows_hta:WmiExec]
+expected_format = TEXT
+output_format = .hta
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_hta:VortexShooter]
+expected_format = RAW_BIN
+output_format = .hta
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+
+[windows_js:SmallShooter]
+expected_format = RAW_BIN
+output_format = .js
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload.
+
+[windows_hta:SmallShooter]
+expected_format = RAW_BIN
+output_format = .hta
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload.
+
+[windows_js:VortexShooter]
+expected_format = RAW_BIN
+output_format = .js
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_js:PowerShooter]
+expected_format = TEXT
+output_format = .js
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_hta:PowerShooter]
+expected_format = TEXT
+output_format = .hta
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_hta:PowerShooterV4]
+expected_format = TEXT
+output_format = .hta
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_js:PowerShooterV4]
+expected_format = TEXT
+output_format = .js
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
