Alpha for MSI support with wixl

--- a/core/config/config.ini
+++ b/core/config/config.ini
@@ -346,3 +346,13 @@ custom_output = This template use DotNetToJScript with the PowerSpace windows_cs
 expected_format = TEXT
 output_format = .js
 custom_output = This template use DotNetToJScript with the PowerSpace windows_cs template to generate the payload. \nAnd encrypt the shellcode with Vortex.
+
+[windows_wix:cmd]
+expected_format = TEXT
+output_format = .msi
+custom_output = Execute generated msi file using "msiexec /i evil-sc.msi /qn"
+
+[windows_wix:cmdFail]
+expected_format = TEXT
+output_format = .msi
+custom_output = Execute generated msi file using "msiexec /i evil-sc.msi /qn"
